dataset1235/2025-2/2947369575/users/3176888201/executions/1003782500_3691284457.log
== RUN (2025-09-01 22:58:05)
-- CODE: 
nota1 = float(input("sua primeira nota: "))
nota2 = float(input("sua segunda nota: "))
nota3 = float(input("sua terceira nota: "))
nota4 = float(input("sua quarta nota: "))
total = (nota1*1+nota2*2+nota3*3+nota4*4)/10

print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
sua primeira nota: sua segunda nota: sua terceira nota: sua quarta nota: 7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
sua primeira nota: sua segunda nota: sua terceira nota: sua quarta nota: 8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
sua primeira nota: sua segunda nota: sua terceira nota: sua quarta nota: 7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
sua primeira nota: sua segunda nota: sua terceira nota: sua quarta nota: 6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
sua primeira nota: sua segunda nota: sua terceira nota: sua quarta nota: 30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
sua primeira nota: sua segunda nota: sua terceira nota: sua quarta nota: 7.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:55:56)
-- CODE: 
nota1 = float(input("sua primeira nota: "))
nota2 = float(input("sua segunda nota: "))
nota3 = float(input("sua terceira nota: "))
nota4 = float(input("sua quarta nota: ")
total = (nota1*1+nota2*2+nota3*3+nota4*4)/10

print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 4
    nota4 = float(input("sua quarta nota: ")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 4
    nota4 = float(input("sua quarta nota: ")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 4
    nota4 = float(input("sua quarta nota: ")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 4
    nota4 = float(input("sua quarta nota: ")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 4
    nota4 = float(input("sua quarta nota: ")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 4
    nota4 = float(input("sua quarta nota: ")
                 ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:57:23)
-- CODE: 
nota1 = float(input("sua primeira nota: "))
nota2 = float(input("sua segunda nota: "))
nota3 = float(input("sua terceira nota: "))
nota4 = float(input("sua quarta nota: ")
total = (nota1*1+nota2*2+nota3*3+nota4*4)/10

print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 4
    nota4 = float(input("sua quarta nota: ")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 4
    nota4 = float(input("sua quarta nota: ")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 4
    nota4 = float(input("sua quarta nota: ")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 4
    nota4 = float(input("sua quarta nota: ")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 4
    nota4 = float(input("sua quarta nota: ")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 4
    nota4 = float(input("sua quarta nota: ")
                 ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:58:07)
-- CODE: 
nota1 = float(input("sua primeira nota: "))
nota2 = float(input("sua segunda nota: "))
nota3 = float(input("sua terceira nota: "))
nota4 = float(input("sua quarta nota: "))
total = (nota1*1+nota2*2+nota3*3+nota4*4)/10

print(round(total,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
sua primeira nota: sua segunda nota: sua terceira nota: sua quarta nota: 7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
sua primeira nota: sua segunda nota: sua terceira nota: sua quarta nota: 8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
sua primeira nota: sua segunda nota: sua terceira nota: sua quarta nota: 7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
sua primeira nota: sua segunda nota: sua terceira nota: sua quarta nota: 6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
sua primeira nota: sua segunda nota: sua terceira nota: sua quarta nota: 30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
sua primeira nota: sua segunda nota: sua terceira nota: sua quarta nota: 7.8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:57:18)
-- CODE: 
nota1 = float(input("sua primeira nota: "))
nota2 = float(input("sua segunda nota: "))
nota3 = float(input("sua terceira nota: "))
nota4 = float(input("sua quarta nota: ")
total = (nota1*1+nota2*2+nota3*3+nota4*4)/10

print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 4
    nota4 = float(input("sua quarta nota: ")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 4
    nota4 = float(input("sua quarta nota: ")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 4
    nota4 = float(input("sua quarta nota: ")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 4
    nota4 = float(input("sua quarta nota: ")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 4
    nota4 = float(input("sua quarta nota: ")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 4
    nota4 = float(input("sua quarta nota: ")
                 ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:57:24)
-- CODE: 
nota1 = float(input("sua primeira nota: "))
nota2 = float(input("sua segunda nota: "))
nota3 = float(input("sua terceira nota: "))
nota4 = float(input("sua quarta nota: ")
total = (nota1*1+nota2*2+nota3*3+nota4*4)/10

print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 4
    nota4 = float(input("sua quarta nota: ")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 4
    nota4 = float(input("sua quarta nota: ")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 4
    nota4 = float(input("sua quarta nota: ")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 4
    nota4 = float(input("sua quarta nota: ")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 4
    nota4 = float(input("sua quarta nota: ")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 4
    nota4 = float(input("sua quarta nota: ")
                 ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
